// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBase renders all appearances with props 1`] = `
.emotion-4 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #FFF;
  background-color: #7D58FF;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  outline: none;
  font-weight: 500;
  display: block;
  text-align: center;
  width: 100%;
  color: #AEB0B4;
  cursor: default;
  background-color: #F0F1F3;
}

.emotion-4::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-4,
.emotion-4 svg {
  fill: #FFF;
}

.emotion-4:hover {
  background-color: #704FE5;
}

.emotion-4:active {
  background-color: #6446CC;
}

.emotion-4,
.emotion-4 svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  color: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active,
.emotion-4:hover svg,
.emotion-4:focus svg,
.emotion-4:active svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background-color: #F0F1F3;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-1:after {
  content: "...";
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<FocusStyleManager
  focusEnabledClass="css-1dqlfdd"
>
  <button
    ariaHaspopup={true}
    className="emotion-4"
    disabled={true}
    onClick={[Function]}
    tabIndex={0}
    type="submit"
  >
    <span
      className="emotion-3"
    >
      <span
        className="emotion-0"
      >
        <Component />
      </span>
      <span
        className="emotion-1"
      >
        Button
      </span>
      <span
        className="emotion-2"
      >
        <Component />
      </span>
    </span>
  </button>
</FocusStyleManager>
`;

exports[`ButtonBase renders all appearances with props 2`] = `
.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-1:after {
  content: "...";
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

.emotion-4 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #7D58FF;
  cursor: pointer;
  outline: none;
  font-weight: 500;
  display: block;
  text-align: center;
  width: 100%;
  color: #AEB0B4;
  cursor: default;
}

.emotion-4::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-4,
.emotion-4 svg {
  fill: #7D58FF;
}

.emotion-4:hover {
  color: #704FE5;
}

.emotion-4:hover,
.emotion-4:hover svg {
  fill: #704FE5;
}

.emotion-4:active {
  color: #6446CC;
}

.emotion-4:active,
.emotion-4:active svg {
  fill: #6446CC;
}

.emotion-4,
.emotion-4 svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  color: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active,
.emotion-4:hover svg,
.emotion-4:focus svg,
.emotion-4:active svg {
  fill: #AEB0B4;
}

<FocusStyleManager
  focusEnabledClass="css-14x8wbg"
>
  <button
    ariaHaspopup={true}
    className="emotion-4"
    disabled={true}
    onClick={[Function]}
    tabIndex={0}
    type="submit"
  >
    <span
      className="emotion-3"
    >
      <span
        className="emotion-0"
      >
        <Component />
      </span>
      <span
        className="emotion-1"
      >
        Button
      </span>
      <span
        className="emotion-2"
      >
        <Component />
      </span>
    </span>
  </button>
</FocusStyleManager>
`;

exports[`ButtonBase renders all appearances with props 3`] = `
.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-1:after {
  content: "...";
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

.emotion-4 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #1B2029;
  background-color: #DADDE2;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  outline: none;
  font-weight: 500;
  display: block;
  text-align: center;
  width: 100%;
  color: #AEB0B4;
  cursor: default;
  background-color: #F0F1F3;
}

.emotion-4::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-4,
.emotion-4 svg {
  fill: #1B2029;
}

.emotion-4:hover {
  background-color: #C3C6CA;
}

.emotion-4:active {
  background-color: #AEB0B4;
}

.emotion-4,
.emotion-4 svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  color: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active,
.emotion-4:hover svg,
.emotion-4:focus svg,
.emotion-4:active svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background-color: #F0F1F3;
}

<FocusStyleManager
  focusEnabledClass="css-1mdlayb"
>
  <button
    ariaHaspopup={true}
    className="emotion-4"
    disabled={true}
    onClick={[Function]}
    tabIndex={0}
    type="submit"
  >
    <span
      className="emotion-3"
    >
      <span
        className="emotion-0"
      >
        <Component />
      </span>
      <span
        className="emotion-1"
      >
        Button
      </span>
      <span
        className="emotion-2"
      >
        <Component />
      </span>
    </span>
  </button>
</FocusStyleManager>
`;

exports[`ButtonBase renders all appearances with props 4`] = `
.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-1:after {
  content: "...";
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

.emotion-4 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #FFF;
  background-color: #EB293A;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  outline: none;
  font-weight: 500;
  display: block;
  text-align: center;
  width: 100%;
  color: #AEB0B4;
  cursor: default;
  background-color: #F0F1F3;
}

.emotion-4::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-4,
.emotion-4 svg {
  fill: #FFF;
}

.emotion-4:hover {
  background-color: #D32434;
}

.emotion-4:active {
  background-color: #BC202E;
}

.emotion-4,
.emotion-4 svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  color: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active,
.emotion-4:hover svg,
.emotion-4:focus svg,
.emotion-4:active svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background-color: #F0F1F3;
}

<FocusStyleManager
  focusEnabledClass="css-1wcx5v7"
>
  <button
    ariaHaspopup={true}
    className="emotion-4"
    disabled={true}
    onClick={[Function]}
    tabIndex={0}
    type="submit"
  >
    <span
      className="emotion-3"
    >
      <span
        className="emotion-0"
      >
        <Component />
      </span>
      <span
        className="emotion-1"
      >
        Button
      </span>
      <span
        className="emotion-2"
      >
        <Component />
      </span>
    </span>
  </button>
</FocusStyleManager>
`;

exports[`ButtonBase renders all appearances with props 5`] = `
.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-1:after {
  content: "...";
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

.emotion-4 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #FFF;
  background-color: #14C684;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  outline: none;
  font-weight: 500;
  display: block;
  text-align: center;
  width: 100%;
  color: #AEB0B4;
  cursor: default;
  background-color: #F0F1F3;
}

.emotion-4::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-4,
.emotion-4 svg {
  fill: #FFF;
}

.emotion-4:hover {
  background-color: #11B176;
}

.emotion-4:active {
  background-color: #109E69;
}

.emotion-4,
.emotion-4 svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  color: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active,
.emotion-4:hover svg,
.emotion-4:focus svg,
.emotion-4:active svg {
  fill: #AEB0B4;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background-color: #F0F1F3;
}

<FocusStyleManager
  focusEnabledClass="css-1wuquou"
>
  <button
    ariaHaspopup={true}
    className="emotion-4"
    disabled={true}
    onClick={[Function]}
    tabIndex={0}
    type="submit"
  >
    <span
      className="emotion-3"
    >
      <span
        className="emotion-0"
      >
        <Component />
      </span>
      <span
        className="emotion-1"
      >
        Button
      </span>
      <span
        className="emotion-2"
      >
        <Component />
      </span>
    </span>
  </button>
</FocusStyleManager>
`;
